# tempo

./: .gitignore  README.md
zephyr/tempo-bt-v1/: CMakeLists.txt  README.md  icm42688-v-support.patch  messages.txt  pm_static.yml  prj.conf  sysbuild.conf  tempo_led.py  tempo_plugin.py
zephyr/tempo-bt-v1/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp_ns.conf
zephyr/tempo-bt-v1/boards/nrf5340dk_nrf5340_cpuapp/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp_ns.conf  tempo_v1.overlay
zephyr/tempo-bt-v1/config/: partitions.yml
zephyr/tempo-bt-v1/docs/: LOG-FORMAT.md  aar.md  algorithms.md  mvp-architecture.md  mvp-task-plan.md
zephyr/tempo-bt-v1/include/: app_init.h  ble_mcumgr.h  fusion.h
zephyr/tempo-bt-v1/include/app/: app_state.h  events.h  log_format.h
zephyr/tempo-bt-v1/include/config/: settings.h
zephyr/tempo-bt-v1/include/services/: aggregator.h  baro.h  file_writer.h  gnss.h  imu.h  led.h  logger.h  orientation.h  storage.h  timebase.h
zephyr/tempo-bt-v1/include/util/: nmea_checksum.h
zephyr/tempo-bt-v1/scripts/: gen_version.py
zephyr/tempo-bt-v1/src/: app_init.c  app_state.c  ble_mcumgr.c  events.c  fusion.c  main.c  mcumgr_custom.c  shell_commands.h
zephyr/tempo-bt-v1/src/config/: settings.c
zephyr/tempo-bt-v1/src/services/: aggregator.c  baro_bmp390.c  file_writer.c  gnss_m10q.c  imu_icm42688.c  led.c  logger.c  orientation.c  storage.c  storage_fatfs.c  storage_littlefs.c  timebase.c
zephyr/tempo-bt-v1/src/util/: nmea_checksum.c
zephyr/tempo-bt-v1/sysbuild/: ipc_radio.conf  mcuboot.conf  mcuboot.overlay
zephyr/tempo-bt-v1/tests/: test_aggregator.c  test_baro.c  test_cs_detailed.c  test_gpio_forwarder.c  test_imu.c  test_orientation.c  test_spi_debug.c  test_spi_no_cs.c  test_uart_pins.c
(+350 files in other folders)
